<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/capture_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/capture_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/color_scan_mask"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/mar_pad_len_30px"
            android:paddingRight="@dimen/mar_pad_len_30px"
            android:src="@drawable/arrow_back_white"
            android:onClick="onBackClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scan_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_34px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/mar_pad_len_30px"
            android:paddingRight="@dimen/mar_pad_len_30px"
            android:src="@drawable/icon_light"
            android:onClick="onLightClick"/>
    </RelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_layout">

        <ImageView
            android:id="@+id/top_mask"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:background="@color/color_scan_mask"
            app:layout_heightPercent="17.02%" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/capture_crop_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/mar_pad_len_22px"
            android:background="@null"
            android:text="@string/scan_tips"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_24px" />

        <RelativeLayout
            android:id="@id/capture_crop_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_mask"
            android:layout_centerHorizontal="true"
            app:layout_widthPercent="66.67%">

            <ImageView
                android:id="@+id/capture_scan_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:background="@drawable/scan_line" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/left_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_mask"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/top_mask"
            android:layout_toLeftOf="@id/capture_crop_layout"
            android:background="@color/color_scan_mask" />

        <ImageView
            android:id="@+id/right_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_mask"
            android:layout_alignParentRight="true"
            android:layout_below="@id/top_mask"
            android:layout_toRightOf="@id/capture_crop_layout"
            android:background="@color/color_scan_mask" />

        <ImageView
            android:id="@id/bottom_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/capture_crop_layout"
            android:background="@color/color_scan_mask"/>

        <TextView
            android:id="@+id/choose_image_txt"
            android:layout_width="@dimen/mar_pad_len_210px"
            android:layout_height="@dimen/mar_pad_len_80px"
            android:layout_below="@id/capture_crop_layout"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/mar_pad_len_80px"
            android:background="@drawable/scan_button"
            android:text="@string/scan_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_24px"
            android:onClick="onChooseImageClick"/>

        <LinearLayout
            android:gravity="center"
            android:layout_below="@id/choose_image_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/scan_button"
                android:text="@string/scan_start"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_24px"
                android:onClick="onStartScanClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/scan_button"
                android:text="@string/scan_stop"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_24px"
                android:onClick="onStopScanClick"/>
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>
</RelativeLayout>